# depadvisor

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/depadvisor/: __init__.py  __main__.py
src/depadvisor/agent/: graph.py  state.py
src/depadvisor/agent/nodes/: analyze_risk.py  check_updates.py  fetch_changelogs.py  fetch_vulns.py  generate_report.py  parse_deps.py
src/depadvisor/cli/: app.py
src/depadvisor/clients/: base.py  github.py  maven.py  npm.py  osv.py  pypi.py
src/depadvisor/llm/: prompts.py  provider.py
src/depadvisor/models/: schemas.py
src/depadvisor/parsers/: base.py  java.py  node.py  python.py
src/depadvisor/server/: api.py
src/depadvisor/utils/: cache.py  output.py  scoring.py  version.py
tests/agent/: test_graph_construction.py
tests/fixtures/java/: pom.xml
tests/fixtures/node/: package.json
tests/fixtures/python/: pyproject_pep621.toml  requirements_simple.txt
tests/integration/: test_github_live.py  test_maven_live.py  test_npm_live.py  test_osv_live.py  test_pypi_live.py
tests/unit/: test_parsers_java.py  test_parsers_node.py  test_parsers_python.py  test_version_utils.py
